--- a/src/app/contacts/contact-modal/contact-modal.component.html
+++ b/src/app/contacts/contact-modal/contact-modal.component.html
@@ -1,19 +1,33 @@
 <h2 mat-dialog-title>{{ isEdit ? 'Редагувати контакт' : 'Додати контакт' }}</h2>
 <form [formGroup]="contactForm" (ngSubmit)="saveContact()">
   <mat-form-field appearance="fill">
-    <mat-label>Ім'я</mat-label>
+    <mat-label>Name</mat-label>
     <input matInput formControlName="firstName" required />
     <mat-error *ngIf="contactForm.get('firstName')?.invalid">Ім'я обов'язкове</mat-error>
   </mat-form-field>
 
   <mat-form-field appearance="fill">
-    <mat-label>Прізвище</mat-label>
+    <mat-label>Surname</mat-label>
     <input matInput formControlName="lastName" required />
+    <mat-error *ngIf="contactForm.get('lastName')?.invalid">Прізвище обов'язкове</mat-error>
   </mat-form-field>
 
   <mat-form-field appearance="fill">
-    <mat-label>Номер телефону</mat-label>
+    <mat-label>+380-XX-XXX-XX-XX</mat-label>
     <input matInput formControlName="phone" required type="tel" />
+    <mat-error *ngIf="contactForm.get('phone')?.invalid">Некоректний номер телефону</mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Email</mat-label>
+    <input matInput formControlName="email" required type="email" />
+    <mat-error *ngIf="contactForm.get('email')?.invalid">Некоректна email-адреса</mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Date of Birth</mat-label>
+    <input matInput formControlName="dateOfBirth" type="date" />
+    <mat-error *ngIf="contactForm.get('dateOfBirth')?.invalid">Вкажіть коректну дату</mat-error>
   </mat-form-field>
 
   <div mat-dialog-actions>
