--- a/src/app/contacts/home/home.component.scss
+++ b/src/app/contacts/home/home.component.scss
@@ -1,7 +1,8 @@
 h1{
-  color: #2950b4;
+  color: #005CBB;
   font-size: 5rem;
-  text-align: center
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .search-container {
@@ -10,22 +11,31 @@ h1{
   position: relative;
   width: 60rem;
   margin: 0 auto;
+  padding: 50px 0 70px 0;
+  gap: 20px;
 }
 
 .search-input {
-  width: 100%;
-  height: 2.5rem;
-  padding: 10px 40px 10px 15px; /* Додаємо простір для кнопки очищення */
+  width: 80%;
+  height: 2rem;
+  padding: 10px 40px 10px 15px; 
   border: 2px solid #ccc;
-  border-radius: 25px; /* Заокруглені кути */
+  border-radius: 25px; 
   font-size: 20px;
   outline: none;
   transition: border-color 0.3s;
 
+
   &:focus {
-    border-color: #6200ea; /* Колір фокусу */
-    box-shadow: 0 0 5px rgba(98, 0, 234, 0.5);
+    border-color: #005CBBab;
+    box-shadow: 0 0 5px #005CBB7c;
   }
+}
+
+.add-btn{
+  width: 15%;
+  height: 3.4rem;
+  font-size: 18px;
 }
 
 .clear-button {
@@ -34,11 +44,66 @@ h1{
   background: none;
   border: none;
   font-size: 18px;
-  color: #6200ea;
+  color: #005CBB;
   cursor: pointer;
   padding: 0;
 
   &:hover {
-    color: #3700b3;
+    color: #005CBB;
   }
 }
+
+
+.contact-item {
+  width: 60rem;
+  display: flex;
+  justify-self: center;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f9f9f9;
+  padding: 15px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s, box-shadow 0.3s;
+  
+  &:hover {
+    transform: scale(1.02);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  }
+}
+
+.contact-item {
+  height: 90px;
+  .contact-info {
+    .name {
+      font-weight: bold; 
+      font-size: 21px;
+      color: #005CBB;
+      margin-right: 35rem;
+    }
+
+    .phone {
+      font-size: 16px; 
+      color: gray; 
+    }
+  }
+}
+
+
+.contact-actions {
+  display: flex;
+  gap: 10px;
+
+  button {
+    padding: 17px 16px;
+    font-size: 20px;
+    border-radius: 4px;
+    
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+}
+
+
